[package]
name = "gemini-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1.6.0", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.5.13", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
rustls = "0.23.27"
tokio-rustls = "0.26.2"
rcgen = "0.13.2"
hyper-rustls = "0.27.5"
dialoguer = "0.11.0"
env_logger = "0.11.5"
log = "0.4.22"
serde_yml = "0.0.12"