[package]
name = "gemini-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1.6.0", features = ["full"] }
tokio = { version = "1.45.1", features = ["full"] }
clap = { version = "4.5.13", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
rcgen = { version = "0.13.2", features = ["pem", "x509-parser"] }
hyper-util = { version = "0.1", default-features = false, features = [
    "server-auto",
] }
rustls = "0.23.27"
tokio-rustls = "0.26.2"
hyper-rustls = "0.27.6"
dialoguer = "0.11.0"
fern = "0.7.1"
log = "0.4.22"
serde_yml = "0.0.12"
anyhow = "1.0.0"
rustls-pemfile = "2"
http-body-util = "0.1"
pem = "3.0.2"
http = "1"
webpki-roots = "1.0.0"
chrono = "0.4.38"
